--- a/index.html
+++ b/index.html
@@ -1,240 +1,249 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friendship Question</title>
     <style>
         body {
-            margin: 0;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
             min-height: 100vh;
+            margin: 0;
+            padding: 20px;
+        }
+
+        .container {
+            /* Increased max-width */
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        h1 {
+            text-align: center;
+            color: #2c3e50;
+            margin-bottom: 40px;
+        }
+
+        .photo-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); /* Increased minimum width */
+            gap: 40px; /* Increased gap */
+            padding: 20px;
+        }
+
+        .photo-frame {
+            background: white;
+            padding: 20px; /* Increased padding */
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            text-align: center;
             display: flex;
             flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background: linear-gradient(135deg, #ffd1dc, #ffe4e1);
-            padding: 20px;
-            position: relative;
-        }
-        .letter-btn {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background: #ff69b4;
-            color: white;
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            border: none;
-            cursor: pointer;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-            z-index: 1000;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 24px;
-        }
-        .letter-container {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 80%;
-            max-width: 600px;
-            background: #fff;
-            padding: 40px;
-            border-radius: 20px;
-            box-shadow: 0 0 20px rgba(0,0,0,0.1);
-            animation: fadeIn 0.5s ease-out;
-        }
-        .letter-content {
-            min-height: 200px;
-            margin: 20px 0;
-            padding: 20px;
-            border: 1px solid #ffd1dc;
-            border-radius: 10px;
-            font-family: 'Courier New', Courier, monospace;
-            line-height: 1.6;
-            text-align: left;
-            background: #fff9fa;
-        }
-        .main-content {
-            transition: opacity 0.5s ease-out;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translate(-50%, -60%); }
-            to { opacity: 1; transform: translate(-50%, -50%); }
-        }
-        .container {
-            max-width: 100%;
-            padding: 20px;
-            background-color: rgba(255, 255, 255, 0.9);
-            border-radius: 20px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        }
-        img {
-            max-width: 300px;
-            width: 100%;
-            height: auto;
-            margin-bottom: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .question {
-            font-size: 24px;
-            margin: 20px 0;
-            color: #ff69b4;
-            font-weight: bold;
-        }
-        .buttons {
-            display: flex;
             gap: 20px;
-            justify-content: center;
-            margin-top: 20px;
         }
-        button {
-            padding: 15px 30px;
-            font-size: 18px;
-            border: none;
-            border-radius: 25px;
-            cursor: pointer;
-            transition: transform 0.2s;
-        }
-        button:hover {
-            transform: scale(1.1);
-        }
-        #yesBtn {
-            background-color: #ff69b4;
-            color: white;
-        }
-        #noBtn {
-            background-color: #ff8da1;
-            color: white;
+
+        .photo-container {
             position: relative;
+            width: 100%;
+            aspect-ratio: 9/16; /* Changed to widescreen ratio */
+            background: #f0f0f0;
+            border-radius: 10px;
+            overflow: hidden;
         }
-        .response {
-            font-size: 20px;
-            margin-top: 20px;
-            color: #ff69b4;
+
+        .hidden-photo {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
             display: none;
+        }
+
+        .cover {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #2c3e50;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 1.5em; /* Increased font size */
             font-weight: bold;
         }
-        .close-letter {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            background: none;
+
+        /* Styled Reveal Button */
+        .reveal-btn {
+            background: linear-gradient(-45deg, #FF3366, #FF6B6B);
+            color: white;
             border: none;
-            font-size: 24px;
+            padding: 12px 30px; /* Increased padding */
+            border-radius: 25px;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-size: 16px; /* Increased font size */
             cursor: pointer;
-            color: #ff69b4;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(255, 51, 102, 0.3);
+            position: relative;
+            overflow: hidden;
+            margin: 0 auto;
+            min-width: 150px; /* Added minimum width */
+        }
+
+        .reveal-btn::after {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: linear-gradient(transparent, rgba(255, 255, 255, 0.3), transparent);
+            transform: rotate(45deg);
+            transition: 0.5s;
+        }
+
+        .reveal-btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 6px 20px rgba(255, 51, 102, 0.4);
+        }
+
+        .reveal-btn:hover::after {
+            left: 100%;
+        }
+
+        .reveal-btn:active {
+            transform: translateY(0);
+        }
+
+        .question-container {
+            display: none;
+            margin-top: 15px;
+            padding: 20px;
+            background: #f8f9fa;
+            border-radius: 12px;
+        }
+
+        .question-text {
+            color: #2c3e50;
+            margin-bottom: 15px;
+            font-size: 1.1em; /* Increased font size */
+        }
+
+        .answer-input {
+            width: 80%;
+            padding: 12px; /* Increased padding */
+            margin: 10px 0;
+            border: 2px solid #ddd;
+            border-radius: 8px;
+            font-size: 16px; /* Increased font size */
+        }
+
+        .answer-input:focus {
+            outline: none;
+            border-color: #FF3366;
+        }
+
+        .error-message {
+            color: #e74c3c;
+            font-size: 14px;
+            margin-top: 10px;
+            display: none;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            .photo-grid {
+                grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+                gap: 20px;
+                padding: 10px;
+            }
+
+            .photo-frame {
+                padding: 15px;
+            }
         }
     </style>
 </head>
 <body>
-   
-    <div class="main-content">
-        <div class="container">
-            <img id="mainImage" src="kitty-shy.gif" alt="Friendship">
-            <div class="question">Are we still friends Sakshi?</div>
-            <div class="buttons">
-                <button id="yesBtn">Yes</button>
-                <button id="noBtn">No</button>
-            </div>
-            <div id="response" class="response"></div>
-        </div>
+    <div class="container">
+        <h1>🎭 The Loss Gallery 🎭</h1>
+        <div class="photo-grid"></div>
     </div>
 
     <script>
-        const yesBtn = document.getElementById('yesBtn');
-        const noBtn = document.getElementById('noBtn');
-        const response = document.getElementById('response');
-        const mainImage = document.getElementById('mainImage');
-        const letterBtn = document.querySelector('.letter-btn');
-        const letterContainer = document.querySelector('.letter-container');
-        const mainContent = document.querySelector('.main-content');
-        const closeLetterBtn = document.querySelector('.close-letter');
-        let noClickCount = 0;
-
-        letterBtn.addEventListener('click', () => {
-            letterContainer.style.display = 'block';
-            mainContent.style.opacity = '0';
-        });
-
-        closeLetterBtn.addEventListener('click', () => {
-            letterContainer.style.display = 'none';
-            mainContent.style.opacity = '1';
-        });
-
-        function createParticle(x, y) {
-            const particle = document.createElement('div');
-            particle.style.position = 'fixed';
-            particle.style.left = x + 'px';
-            particle.style.top = y + 'px';
-            particle.style.width = '10px';
-            particle.style.height = '10px';
-            particle.style.backgroundColor = `#${Math.floor(Math.random()*16777215).toString(16)}`;
-            particle.style.borderRadius = '50%';
-            document.body.appendChild(particle);
-
-            const angle = Math.random() * Math.PI * 2;
-            const velocity = 8 + Math.random() * 4;
-            const vx = Math.cos(angle) * velocity;
-            const vy = Math.sin(angle) * velocity;
-            let opacity = 1;
-
-            function animate() {
-                particle.style.left = (parseFloat(particle.style.left) + vx) + 'px';
-                particle.style.top = (parseFloat(particle.style.top) + vy) + 'px';
-                opacity -= 0.02;
-                particle.style.opacity = opacity;
-
-                if (opacity > 0) {
-                    requestAnimationFrame(animate);
-                } else {
-                    particle.remove();
-                }
+        const photos = [
+            { 
+                question: "Who looks hot (sometimes* 🤩)...Hint:-Adi 😗",
+                password: "Adi",
+                imgUrl: "WhatsApp Image 2025-01-12 at 11.36.58 PM.jpeg" // Increased size for better quality
+            },
+            {
+                question: "Chal bata tei bachpan ki gol maatol photo ki wajah se me kya bulata tuje 😏?",
+                password: "golu",
+                imgUrl: "WhatsApp Image 2025-01-12 at 11.37.09 PM.jpeg"
+            },
+            {
+                question: "Type youwon to see the photo, karna padta accept golu 😗",
+                password: "youwon",
+                imgUrl: "WhatsApp Image 2025-01-12 at 11.37.59 PM.jpeg"
+            },
+            {
+                question: "Type myloss to accept the loss and see the photo 😜",
+                password: "myloss",
+                imgUrl: "WhatsApp Image 2025-01-12 at 11.38.50 PM.jpeg"
+            },
+            {
+                question: "whose loss baby? 😏",
+                password: "myloss",
+                imgUrl: "img5.png"
             }
-            animate();
+        ];
+
+        const photoGrid = document.querySelector('.photo-grid');
+        photos.forEach((photo, index) => {
+            const frame = document.createElement('div');
+            frame.className = 'photo-frame';
+            frame.innerHTML = `
+                <div class="photo-container">
+                    <img src="${photo.imgUrl}" class="hidden-photo" alt="Hidden photo ${index + 1}">
+                    <div class="cover">Mystery Photo ${index + 1}</div>
+                </div>
+                <button class="reveal-btn" onclick="showQuestion(${index})">Reveal</button>
+                <div class="question-container" id="question-${index}">
+                    <div class="question-text">${photo.question}</div>
+                    <input type="text" class="answer-input" placeholder="Enter your answer">
+                    <div class="error-message">You have to accept it to see it</div>
+                    <button class="reveal-btn" onclick="checkAnswer(${index})">Submit</button>
+                </div>
+            `;
+            photoGrid.appendChild(frame);
+        });
+
+        function showQuestion(index) {
+            document.querySelectorAll('.question-container').forEach(container => {
+                container.style.display = 'none';
+            });
+            const questionContainer = document.getElementById(`question-${index}`);
+            questionContainer.style.display = 'block';
+            questionContainer.querySelector('.error-message').style.display = 'none';
+            questionContainer.querySelector('.answer-input').value = '';
         }
 
-        yesBtn.addEventListener('click', () => {
-            response.style.display = 'block';
-            response.textContent = "I knew you always believed I am your friend (always 😏)";
-            mainImage.src = "stitch.png";
+        function checkAnswer(index) {
+            const frame = document.querySelectorAll('.photo-frame')[index];
+            const questionContainer = document.getElementById(`question-${index}`);
+            const answerInput = questionContainer.querySelector('.answer-input');
+            const errorMessage = questionContainer.querySelector('.error-message');
             
-            for (let i = 0; i < 50; i++) {
-                setTimeout(() => {
-                    createParticle(
-                        Math.random() * window.innerWidth,
-                        Math.random() * window.innerHeight
-                    );
-                }, i * 50);
-            }
-        });
-
-        noBtn.addEventListener('click', () => {
-            noClickCount++;
-            const btnRect = noBtn.getBoundingClientRect();
-            const maxX = window.innerWidth - btnRect.width;
-            const maxY = window.innerHeight - btnRect.height;
-            
-            noBtn.style.position = 'fixed';
-            noBtn.style.left = Math.random() * maxX + 'px';
-            noBtn.style.top = Math.random() * maxY + 'px';
-
-            response.style.display = 'block';
-            if (noClickCount === 1) {
-                response.textContent = "No kyu dabaya! I am watching chal yes daba 😒";
-                mainImage.src = "shocked.jpg";
+            if (answerInput.value.toLowerCase().trim() === photos[index].password.toLowerCase()) {
+                frame.querySelector('.cover').style.display = 'none';
+                frame.querySelector('.hidden-photo').style.display = 'block';
+                questionContainer.style.display = 'none';
             } else {
-                response.textContent = "Karti reh fir try Golu meri hi website hai, Yes dbale naaaaa 😏";
-                mainImage.src = "evil.jpg";
+                errorMessage.style.display = 'block';
             }
-        });
+        }
     </script>
 </body>
 </html>
